--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "engines": {
-    "node": "14.15.0"
-  },
+  "engines" : { "node" : "14.15.0" },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
-    "start": "node server.js",
+    "start": "webpack serve --open --config webpack.dev.js",
+    "server": "node server.js",
     "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
@@ -22,7 +21,6 @@
   },
   "devDependencies": {
     "css-loader": "^6.4.0",
-    "css-minimizer-webpack-plugin": "^3.1.1",
     "express": "^4.17.1",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
