--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "private": true,
-  "engines" : { "node" : "14.15.0" },
+  "engines": {
+    "node": "14.15.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
@@ -25,6 +27,7 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.3.0",
+    "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-middleware": "^5.2.1",
     "webpack-dev-server": "^4.3.1",
