--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "css-loader": "^6.4.0",
+    "css-minimizer-webpack-plugin": "^3.1.1",
     "express": "^4.17.1",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
