--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "g": "^2.0.1",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
-    "n": "^7.5.0"
+    "n": "^7.5.0",
+    "node-sass": "^6.0.1"
   },
   "devDependencies": {
     "css-loader": "^6.4.0",
