fixing start script

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "watch": "webpack --watch",
     "start": "node server.js",
     "server": "node server.js",
-
-    "heroku-postbuild": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js"
   },
   "keywords": [],
   "author": "",
