--- a/package.json
+++ b/package.json
@@ -20,7 +20,19 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "css-loader": "^6.4.0",
+    "css-minimizer-webpack-plugin": "^3.1.1",
+    "express": "^4.17.1",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.2",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.58.2",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-dev-server": "^4.3.1",
+    "webpack-merge": "^5.8.0"
   },
   "devDependencies": {
     "css-loader": "^6.4.0",
