--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
     "express": "^4.17.1",
-    "webpack": "^5.58.2"
+    "webpack": "^5.58.2",
+    "webpack-dev-middleware": "^5.2.1"
   },
   "devDependencies": {
     "css-loader": "^6.4.0",
