--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "mobile-detect": "^1.4.5",
     "express": "^4.17.1",
     "webpack": "^5.58.2",
-    "webpack-dev-middleware": "^5.2.1"
+    "webpack-dev-middleware": "^5.2.1",
+    "webpack-merge": "^5.8.0",
+    "html-webpack-plugin": "^5.3.2"
   },
   "devDependencies": {
     "css-loader": "^6.4.0",
