--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "webpack": "^5.58.2",
     "webpack-dev-middleware": "^5.2.1",
     "webpack-merge": "^5.8.0",
-    "html-webpack-plugin": "^5.3.2"
+    "html-webpack-plugin": "^5.3.2",
+    "style-loader": "^3.3.0",
+    "css-loader": "^6.4.0"
   },
   "devDependencies": {
     "css-loader": "^6.4.0",
