--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "css-loader": "^6.4.0",
     "express": "^4.17.1",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "lodash": "^4.17.21",
     "mobile-detect": "^1.4.5",
