--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "css-loader": "^6.4.0",
     "express": "^4.17.1",
+    "favicons": "^6.2.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "lodash": "^4.17.21",
@@ -32,6 +33,7 @@
     "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "express": "^4.17.1",
+    "favicons-webpack-plugin": "^5.0.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
