--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "style-loader": "^3.3.0",
     "webpack": "^5.58.2",
     "webpack-dev-middleware": "^5.2.1",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "favicons-webpack-plugin": "^5.0.2"
   },
   "devDependencies": {
     "css-loader": "^6.4.0",
